--- a/Use/use.css
+++ b/Use/use.css
@@ -4,6 +4,7 @@ body{
 	background-attachment:fixed;
 	background-position: center;
 	background-size:cover;
+	overflow-x:hidden;
 }
 
 h1{
@@ -39,11 +40,12 @@ p{
 	background-attachment:fixed;
 	background-position: center;
 	background-size:cover;
-	min-height:50vh;
+	padding-bottom:2vw;
 }
 
 #Del h2{
 	background: #2980b9;
+	margin-bottom: 2vw;
 }
 
 
@@ -52,14 +54,34 @@ p{
 
 
 
-
-
-
-
-
-
+#Film{
+	background-image:url('https://static.pexels.com/photos/8338/pexels-photo.jpg');
+	background-attachment:fixed;
+	background-position: center;
+	background-size:cover;
+	padding-bottom:2vw;
+}
 #Film h2{
 	background: #c0392b;
+	margin-bottom: 2vw;
+}
+
+
+
+
+
+
+
+#Fun{
+	background-image:url('https://upload.wikimedia.org/wikipedia/commons/1/17/2014_prototype_of_the_Nixie_drone_flown_by_Christoph_Kohstall.png');
+	background-attachment:fixed;
+	background-position: center;
+	background-size:cover;
+	padding-bottom:2vw;
+}
+#Fun h2{
+	background: #27ae60;
+	margin-bottom: 2vw;
 }
 
 
@@ -72,10 +94,112 @@ p{
 
 
 
+.Box{
+	width:96%;
+	min-height:20vh;
+	margin-left:2vw;
+	position:relative;
+	text-align:left;
+	margin-bottom:5vh;
+}
+.Box .Pic{
+	width:40%;
+	position:relative;
+	z-index:1;
+	overflow-y:hidden;
+	display:inline-block;
+	border-radius:3vh;
+}
+.Box .Pic .PicOverlay{
+	position:absolute;
+	top:0;
+	transform:translateY(100%);
+	transition: transform 0.5s ease;
+	background:rgba(0,0,0,0.5);
+	width:100%;
+	height:100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	text-align:center;
+	color:white;
+}
+.Box .Pic img{
+	object-fit:cover;
+	object-position:center;
+	width:100%;
+	height:50vh;
+	display:block;
+}
+.Box .BoxTitle{
+	position:absolute;
+	z-index:0;
+	width:55%;
+	top:50%;
+	transform:translate(0, -50%);
+	text-align:center;
+	transition: transform 0.5s ease;
+	text-shadow:
+		-1px -1px 0 white,  
+		1px -1px 0 white,
+		-1px 1px 0 white,
+		1px 1px 0 white;
+}
+.Box .Text{
+	transition: all 0.5s ease;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	padding:0 1vw;
+	height:80%;
+	width:55%;
+	position:absolute;
+	z-index:0;
+	background:black;
+	color:white;
+	top:10%;
+	left:40%;
+}
+.Box:hover .Pic .PicOverlay{
+	transform:translateY(0);
+}
 
 
 
 
-#Fun h2{
-	background: #27ae60;
+
+
+.LeftBox .BoxTitle{
+	left:45%;
+}
+.LeftBox .Text{
+	transform:scaleX(0.6)translateX(-140%);
+	border-radius: 0 3vh 3vh 0;
+}
+
+.LeftBox:hover .BoxTitle{
+	transform:translate(100vw, -50%);
+}
+.LeftBox:hover .Text{
+	transform:scaleX(1)translateX(0);
+}
+
+
+
+.RightBox{
+	text-align:right;
+}
+.RightBox .BoxTitle{
+	right:45%;
+}
+.RightBox .Text{
+	transform:scaleX(0.6)translateX(40%);
+	border-radius: 3vh 0 0 3vh;
+}
+
+.RightBox:hover .BoxTitle{
+	transform:translate(-100vw, -50%);
+}
+.RightBox:hover .Text{
+	transform:scaleX(1)translateX(-64.9%);
 }
