--- a/Use/use.css
+++ b/Use/use.css
@@ -113,7 +113,7 @@ p{
 .Box .Pic .PicOverlay{
 	position:absolute;
 	top:0;
-	transform:translateY(100%);
+	transform:translateY(100%)translateZ(0);
 	transition: transform 0.5s ease;
 	background:rgba(0,0,0,0.5);
 	width:100%;
@@ -136,7 +136,7 @@ p{
 	z-index:0;
 	width:55%;
 	top:50%;
-	transform:translate(0, -50%);
+	transform:translate(0, -50%)translateZ(0);
 	text-align:center;
 	transition: transform 0.5s ease;
 	text-shadow:
@@ -146,7 +146,7 @@ p{
 		1px 1px 0 white;
 }
 .Box .Text{
-	transition: all 0.5s ease;
+	transition: transform 0.5s ease;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -161,7 +161,7 @@ p{
 	left:40%;
 }
 .Box:hover .Pic .PicOverlay{
-	transform:translateY(0);
+	transform:translateY(0)translateZ(0);
 }
 
 
@@ -173,15 +173,15 @@ p{
 	left:45%;
 }
 .LeftBox .Text{
-	transform:scaleX(0.6)translateX(-140%);
+	transform:scaleX(0.6)translateX(-140%)translateZ(0);
 	border-radius: 0 3vh 3vh 0;
 }
 
 .LeftBox:hover .BoxTitle{
-	transform:translate(100vw, -50%);
+	transform:translate(100vw, -50%)translateZ(0);
 }
 .LeftBox:hover .Text{
-	transform:scaleX(1)translateX(-0.1%);
+	transform:scaleX(1)translateX(-0.1%)translateZ(0);
 }
 
 
@@ -193,13 +193,13 @@ p{
 	right:45%;
 }
 .RightBox .Text{
-	transform:scaleX(0.6)translateX(40%);
+	transform:scaleX(0.6)translateX(40%)translateZ(0);
 	border-radius: 3vh 0 0 3vh;
 }
 
 .RightBox:hover .BoxTitle{
-	transform:translate(-100vw, -50%);
+	transform:translate(-100vw, -50%)translateZ(0);
 }
 .RightBox:hover .Text{
-	transform:scaleX(1)translateX(-64.9%);
+	transform:scaleX(1)translateX(-64.9%)translateZ(0);
 }
