--- a/Tech/tech.css
+++ b/Tech/tech.css
@@ -72,11 +72,17 @@ body {
     bottom:0;
     background-color:#fff; /* change if the mask should have another color then white */
     z-index:999999; /* makes sure it stays on top */
+	
+		
+	display: flex;
+	align-items: center;
+	justify-content: center;
+
 }
 
 #status {
     width:200px;
-    height:200px;
+	
     position:absolute;
     left:50%; /* centers the loading animation horizontally one the screen */
     top:50%; /* centers the loading animation vertically one the screen */
@@ -86,4 +92,5 @@ body {
     margin:-100px 0 0 -100px; /* is width and height divided by two */
     
     text-align:center;
+
 }
