--- a/Tech/tech.css
+++ b/Tech/tech.css
@@ -2,6 +2,14 @@
   display: block;
   height: 10000px;
 }
+#v0 {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  min-width: 100%;
+  min-height: 100%;
+  transform:translate(-50%,-50%);
+}
 #v1 {
   position: fixed;
   top: 50%;
