--- a/Prob/prob.css
+++ b/Prob/prob.css
@@ -8,13 +8,19 @@ body{
 }
 
 h1{
-    margin-top:50vh;
     transform:translateY(-50%);
 	font-size:300%;
+	background:rgba(236, 240, 241,0.8);
+	max-width:80vw;
+	margin: 50vh auto 0 auto;
 }
 
 h2{
 	padding: 5vh;
+}
+h2 span{
+	background:rgba(236, 240, 241,0.8);
+	padding: 2vh 5vh;
 }
 
 
@@ -27,10 +33,13 @@ section{
 	background-position: center;
 	background-size:cover;
 	min-height:40vh;
+	padding-bottom: 5vh;
 }
 p{
-	margin:0;
-	padding: 10px;
+	margin:5vh 5vw 0 5vw;
+	padding: 2vw;
+	background:#2c3e50;
+	color:white;
 }
 
 section:nth-child(3){
@@ -41,5 +50,6 @@ section:nth-child(4){
     background-image:url('https://c2.staticflickr.com/8/7521/15680439035_3e12e242b9_k.jpg');
 }
 section:nth-child(5){
-    background-image:url('https://upload.wikimedia.org/wikipedia/commons/5/5f/Danger-keep_off_sign.jpg');
+	/*background-image:url('https://upload.wikimedia.org/wikipedia/commons/5/5f/Danger-keep_off_sign.jpg');*/
+	background-image:url('/img/Danger.jpg');
 }
