--- a/drones.css
+++ b/drones.css
@@ -1,5 +1,5 @@
 body{
-	background:linear-gradient(#7ccce8, white);
+	background:linear-gradient(#7ccce8, white, #7ccce8);
 	width:100%;
 }
 h1{
@@ -22,10 +22,17 @@ h2{
 }
 
 #Drone{
-	width:10vw;
-	height:10vh;
+	width:20vw;
+	height:10vw;
 	
-	background-image:url();
+	position:fixed;
+	z-index:10;
+	
+	transform:rotateY(180deg);
+	background-image:url("http://127.0.0.1:50334/img/SaroshDraws/Side_Drone.svg");
+	
+	
+	bottom:12vh;left:40vw;
 }
 
 
@@ -57,6 +64,12 @@ h2{
 	width:40vw;
 	text-align:right;
 }
+#Pic2{
+	background-image:url('https://upload.wikimedia.org/wikipedia/en/8/8c/Nuvola_apps_package.svg.png');
+	width:8vw;
+	height:8vw;
+	position:fixed;
+}
 
 
 
@@ -68,8 +81,8 @@ h2{
 
 #Text3{
 	position:fixed;
-	top:35%;
-	right:10vw;
+	top:50%;
+	right:2vw;
 	width:40vw;
 	text-align:right;
 }
@@ -85,8 +98,50 @@ h2{
 
 #Text4{
 	position:fixed;
-	bottom:40%;
+	top:50%;
 	left:10vw;
 	width:40vw;
 	text-align:left;
+}
+#Pic4{
+	background-image:url("https://pixabay.com/static/uploads/photo/2012/04/10/17/24/airplane-26560_960_720.png");
+	height:100vw;
+	width:200vw;
+	position:fixed;
+	background-position: center;
+	background-size:contain;
+	transform:rotateY(180deg);
+	top:-45vw;
+	left:0;
+}
+
+
+
+
+
+
+
+#Sec5{
+	position:fixed;
+	top:20%;
+	height:60%;
+	width:70%;
+	right:10%;
+	text-align:right;
+	
+	display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+#BG5{
+	width:120%;
+	right:0;
+	height:150vh;
+	top:-50vh;
+	position:fixed;
+	z-index:-1;
+	
+	background-image:url("/img/SaroshDraws/Schoolno_kids.svg");
+	background-position: 100% 100%;
 }
