--- a/Prob/prob.css
+++ b/Prob/prob.css
@@ -15,13 +15,13 @@ h1{
 	margin: 50vh auto 0 auto;
 }
 
-h2{
+/*h2{
 	padding: 5vh;
 }
 h2 span{
 	background:rgba(236, 240, 241,0.8);
 	padding: 2vh 5vh;
-}
+}*/
 
 
 
@@ -32,14 +32,18 @@ section{
 	background-attachment:fixed;
 	background-position: center;
 	background-size:cover;
-	min-height:40vh;
-	padding-bottom: 5vh;
+	min-height:100vh;
+	padding:0;
 }
-p{
-	margin:5vh 5vw 0 5vw;
+section div{
 	padding: 2vw;
 	background:#2c3e50;
 	color:white;
+	text-align:left;
+	position:relative;
+	top:10vh;
+	left:5vw;
+	width:60vw;
 }
 
 section:nth-child(3){
