--- a/Prob/prob.css
+++ b/Prob/prob.css
@@ -12,7 +12,9 @@ h1{
 	font-size:300%;
 	background:rgba(236, 240, 241,0.8);
 	max-width:80vw;
-	margin: 50vh auto 0 auto;
+	margin: 0 auto;
+	position:relative;
+	top:50vh;
 }
 
 /*h2{
@@ -46,14 +48,33 @@ section div{
 	width:60vw;
 }
 
-section:nth-child(3){
-    margin-top:50vh;
+#Sec1{
+	
     background-image:url('https://c2.staticflickr.com/4/3094/2904994626_64c79250d4_b.jpg');
 }
-section:nth-child(4){
+#Sec2{
     background-image:url('https://c2.staticflickr.com/8/7521/15680439035_3e12e242b9_k.jpg');
 }
-section:nth-child(5){
+#Sec3{
 	/*background-image:url('https://upload.wikimedia.org/wikipedia/commons/5/5f/Danger-keep_off_sign.jpg');*/
 	background-image:url('/img/Danger.jpg');
+}
+
+
+
+
+#DownButton{
+	position:fixed;
+	bottom:1vh;
+	right:1vh;
+	background:black;
+	color:white;
+	cursor:pointer;
+	text-align:center;
+	
+	width:50px;
+	height:50px;
+	border-radius:25px;
+	line-height:50px;
+	font-size:175%;
 }
