--- a/uni.css
+++ b/uni.css
@@ -47,6 +47,11 @@ nav li a{
 	color:black;
 	text-decoration:none;
 	transition: background 0.5s ease;
+	
+	-ms-user-select:none;
+	-moz-user-select:none;
+	-webkit-user-select:none;
+	user-select:none;
 }
 nav li:nth-child(1) a{
 	border-top-left-radius:20px;
@@ -61,6 +66,9 @@ nav li:nth-child(4) a{
 
 nav li a:hover{
 	background:white;
+}
+nav li a:active{
+	background:grey;
 }
 nav li a:visited{
 	color:black;
