--- a/Hist/hist.css
+++ b/Hist/hist.css
@@ -3,6 +3,7 @@ body{
 	background-attachment:fixed;
 	background-size:cover;
 	background-position: center center;
+	
 }
 
 h1{
@@ -14,6 +15,10 @@ h1{
 	margin-top:40vh;
 	text-align:center;
 	margin-bottom:30vh;
+}
+
+p{
+	font-size:125%;
 }
 
 
