NEW: Index Material

--- a/drones.css
+++ b/drones.css
@@ -28,7 +28,7 @@ h2{
 	height:10vw;
 	
 	position:fixed;
-	z-index:10;
+	z-index:100;
 	
 	transform:rotateY(180deg);
 	background-image:url("/img/SaroshDraws/Side_Drone.svg");
@@ -77,7 +77,12 @@ p{
 	right:10vw;
 	width:40vw;
 	text-align:right;
+	min-height:initial;
 }
+#Text2 p{
+	width:calc(100% - 32px);
+}
+
 #Pic2{
 	background-image:url('https://upload.wikimedia.org/wikipedia/en/8/8c/Nuvola_apps_package.svg.png');
 	width:8vw;
@@ -99,6 +104,11 @@ p{
 	right:2vw;
 	width:40vw;
 	text-align:right;
+	z-index:9;
+	min-height:initial;
+}
+#Text3 p{
+	width:calc(100% - 32px);
 }
 
 
@@ -137,17 +147,18 @@ p{
 
 #Sec5{
 	position:fixed;
-	top:25%;
-	height:50%;
+	top:50%;
+	/*height:50%;*/
+	min-height:initial;
 	right:10%;
-	text-align:right;
+	/*text-align:right;
 	
 	background:rgba(236, 240, 241,0.6);
 	padding: 0 5vw;
 	
 	display: flex;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: flex-end;*/
 }
 
 #BG5{
@@ -160,4 +171,19 @@ p{
 	
 	background-image:url("/img/SaroshDraws/Schoolno_kids.svg");
 	background-position: 100% 100%;
+}
+
+
+
+
+
+
+
+
+
+
+#bgScrollGrad{
+	background:linear-gradient(#7ccce8, white, #7ccce8);
+	z-index:-999999;
+	position:absolute;
 }
