--- a/Use/use.css
+++ b/Use/use.css
@@ -7,16 +7,31 @@ body{
 	overflow-x:hidden;
 }
 
-h1{
+/*h1{
 	margin:30vh;
 	font-size:300%;
 	background:rgba(236, 240, 241,0.8);
+}*/
+#BigTitle{
+    transform:translateY(-50%);
+	font-size:300%;
+	width:80vw;
+	margin: 40vh auto;
+	min-height:initial;
+	padding-bottom:0;
 }
 
-h2{
+.SectionTitle{
 	padding: 5vh;
+	width:80vw !important;
+	min-height:initial !important;
+	margin-left:10vw;
+	position:relative !important;
+	top:-5vh !important;
 }
-
+.SectionTitle h2{
+	margin-bottom:2vw;
+}
 
 
 
@@ -44,9 +59,8 @@ p{
 	padding-bottom:2vw;
 }
 
-#Del h2{
-	background: #2980b9;
-	margin-bottom: 2vw;
+#Del .SectionTitle{
+	background: #4FC3F7;
 }
 
 
@@ -62,9 +76,8 @@ p{
 	background-size:cover;
 	padding-bottom:2vw;
 }
-#Film h2{
-	background: #c0392b;
-	margin-bottom: 2vw;
+#Film .SectionTitle{
+	background: #E57373;
 }
 
 
@@ -80,9 +93,8 @@ p{
 	background-size:cover;
 	padding-bottom:2vw;
 }
-#Fun h2{
-	background: #27ae60;
-	margin-bottom: 2vw;
+#Fun .SectionTitle{
+	background: #81C784;
 }
 
 
@@ -91,6 +103,16 @@ p{
 
 
 
+
+
+
+.DarkCard{
+	color:#FAFAFA !important;
+	background: #212121 !important;
+}
+.DarkCard .mdl-card__supporting-text{
+	color:#FAFAFA !important;
+}
 
 
 
@@ -109,21 +131,20 @@ p{
 	z-index:1;
 	overflow-y:hidden;
 	display:inline-block;
-	border-radius:3vh;
+	/*border-radius:3vh;*/
 }
 .Box .Pic .PicOverlay{
 	position:absolute;
-	top:0;
+	bottom:0;
 	transform:translateY(100%)translateZ(0);
 	transition: transform 0.5s ease;
-	background:rgba(0,0,0,0.5);
+	/*background:rgba(0,0,0,0.5);*
+	background:white;*/
 	width:100%;
-	height:100%;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	text-align:center;
-	color:white;
+	height:20%;
+	min-height:120px;
+	/*text-align:center;
+	/*color:white;*/
 }
 .Box .Pic img{
 	object-fit:cover;
@@ -139,15 +160,12 @@ p{
 	top:50%;
 	transform:translate(0, -50%)translateZ(0);
 	text-align:center;
-	transition: transform 0.5s ease;
-	text-shadow:
-		-1px -1px 0 white,  
-		1px -1px 0 white,
-		-1px 1px 0 white,
-		1px 1px 0 white;
+	transition: transform 0.5s ease, opacity 0.5s ease;
+	/*text-shadow:		-1px -1px 0 white,  		1px -1px 0 white,		-1px 1px 0 white,		1px 1px 0 white;*/
+	min-height:initial;
 }
 .Box .Text{
-	transition: transform 0.5s ease;
+	transition: transform 0.5s ease, opacity 0.5s ease;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -156,10 +174,11 @@ p{
 	width:55%;
 	position:absolute;
 	z-index:0;
-	background:black;
-	color:white;
+	/*background:black;
+	color:white;*/
 	top:10%;
 	left:40%;
+	opacity: 0;
 }
 .Box:hover .Pic .PicOverlay{
 	transform:translateY(0)translateZ(0);
@@ -174,15 +193,17 @@ p{
 	left:45%;
 }
 .LeftBox .Text{
-	transform:scaleX(0.6)translateX(-140%)translateZ(0);
-	border-radius: 0 3vh 3vh 0;
+	transform:translateX(-20%)translateZ(0);
+	/*border-radius: 0 3vh 3vh 0;*/
 }
 
 .LeftBox:hover .BoxTitle{
-	transform:translate(100vw, -50%)translateZ(0);
+	transform:translate(30vw, -50%)translateZ(0);
+	opacity:0;
 }
 .LeftBox:hover .Text{
-	transform:scaleX(1)translateX(-0.1%)translateZ(0);
+	transform:translateX(5%)translateZ(0);
+	opacity:1;
 }
 
 
@@ -194,13 +215,25 @@ p{
 	right:45%;
 }
 .RightBox .Text{
-	transform:scaleX(0.6)translateX(40%)translateZ(0);
-	border-radius: 3vh 0 0 3vh;
+	transform:translateX(-50%)translateZ(0);
+	/*border-radius: 3vh 0 0 3vh;*/
 }
 
+
+.RightBox .mdl-card__title, .RightBox .mdl-card__title-text{
+	display:block !important;
+}
+.RightBox .mdl-card__supporting-text{
+	display:block;
+	width:calc(100% - 32px);
+}
+
+
 .RightBox:hover .BoxTitle{
-	transform:translate(-100vw, -50%)translateZ(0);
+	transform:translate(-30vw, -50%)translateZ(0);
+	opacity:0;
 }
 .RightBox:hover .Text{
-	transform:scaleX(1)translateX(-64.9%)translateZ(0);
+	transform:translateX(-70%)translateZ(0);
+	opacity:1;
 }
