FIX: Uses MDL Image BG White Leak

--- a/Use/use.css
+++ b/Use/use.css
@@ -131,6 +131,7 @@ p{
 	z-index:1;
 	overflow-y:hidden;
 	display:inline-block;
+	background:initial !important;
 	/*border-radius:3vh;*/
 }
 .Box .Pic .PicOverlay{
