--- a/Use/use.css
+++ b/Use/use.css
@@ -119,7 +119,7 @@ p{
 
 .Box{
 	width:96%;
-	min-height:20vh;
+	/*min-height:20vh;*/
 	margin-left:2vw;
 	position:relative;
 	text-align:left;
@@ -143,7 +143,7 @@ p{
 	background:white;*/
 	width:100%;
 	height:20%;
-	min-height:120px;
+	min-height:120px !important;
 	/*text-align:center;
 	/*color:white;*/
 }
