--- a/drones.css
+++ b/drones.css
@@ -168,8 +168,8 @@ p{
 #BG5{
 	min-width:120vw;
 	right:0;
-	min-height:100vh;
-	bottom:0;
+	min-height:calc(100vh + 1%);
+	bottom:-1%;
 	position:fixed;
 	z-index:-1;
 	
