--- a/uni.css
+++ b/uni.css
@@ -1,13 +1,11 @@
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:700|Arimo);
-
+@import url(https://fonts.googleapis.com/css?family=Aldrich|Roboto);
 html, body{
 	padding:0;
 	margin:0;
-	font-family: 'Arimo', sans-serif;
+	font-family: 'Roboto', sans-serif;
 }
 
 h1, h2, h3, h4, h5, h6{
-	font-family: 'Open Sans', sans-serif;
 	margin:0;
 	padding:0;
 }
