FIX: Home Screen Splash IE Hack

--- a/drones.css
+++ b/drones.css
@@ -65,8 +65,7 @@ p{
 	position:fixed;
 	z-index:-1;
 	
-	background-image:url("/img/clouds-161581.svg");
-	background-size: 100% 200%;
+	background-image:url("/img/SaroshDraws/iehack/clouds.png");
 }
 
 
