--- a/drones.css
+++ b/drones.css
@@ -31,7 +31,7 @@ h2{
 	height:10vw;
 	
 	position:fixed;
-	z-index:100;
+	z-index:0;
 	
 	transform:rotateY(180deg);
 	background-image:url("/img/SaroshDraws/Side_Drone.svg");
@@ -60,8 +60,8 @@ p{
 
 
 #BG1{
-	width:150%;
-	height:100vh;
+	min-width:150%;
+	min-height:100vh;
 	position:fixed;
 	z-index:-1;
 	
