--- a/Hist/hist.css
+++ b/Hist/hist.css
@@ -27,6 +27,10 @@ p{
 	/*background:rgba(255,255,255,0.4);*
 	padding:20px;*/
 	padding-left:2vw;
+	max-width:100%;
+}
+.SideChart canvas{
+	max-width:100%;
 }
 
 section{
