--- a/Use/use.css
+++ b/Use/use.css
@@ -181,6 +181,9 @@ p{
 	left:40%;
 	opacity: 0;
 }
+.Box .Text p{
+	overflow-y:auto;
+}
 .Box:hover .Pic .PicOverlay{
 	transform:translateY(0)translateZ(0);
 }
@@ -237,4 +240,61 @@ p{
 .RightBox:hover .Text{
 	transform:translateX(-70%)translateZ(0);
 	opacity:1;
+}
+
+
+
+@media (max-width : 600px) {
+	.Box{
+		width:80vw;
+		position:static !important;
+		margin: 20px auto;
+	}
+	.BoxTitle{
+		transform:translateZ(0) !important;
+		opacity:1 !important;
+		position:static !important;
+		width:100% !important;
+		border-bottom-left-radius:0 !important;
+		border-bottom-right-radius:0 !important;
+	}
+	.Pic{
+		width:100% !important;
+		left:0;
+		margin:0 !important;
+		border-radius:0 !important;
+	}
+	.Pic img{
+		height:30vh !important;
+	}
+	.Text{
+		opacity:1 !important;
+		transform:translateY(-4px) !important;
+		position:static !important;
+		width:100% !important;
+		margin:0 !important;
+		border-top-left-radius:0 !important;
+		border-top-right-radius:0 !important;
+	}
+	.PicOverlay{
+		display:none !important;
+	}
+	
+	
+	.SectionTitle{
+		padding: 5vh;
+		width:80vw !important;
+		min-height:initial !important;
+		margin-left:auto;
+		margin-right:auto;
+		position:static !important;
+		transform:translateY(-5vh);
+	}
+	.SectionTitle h2{
+		margin-bottom:2vw;
+	}
+	
+	section{
+		padding-bottom:40px !important;
+	}
 }
